Revision history for Perl extension Carp::Assert::More.


2.5.0   Fri Oct 25 14:46:06 CDT 2024
        [ENHANCEMENTS]
        Add assert_context_list() function.

        Add assert_context_void() function.


2.4.0   Mon Mar  4 21:54:07 CST 2024
        [ENHANCEMENTS]
        New function assert_arrayref_all() calls an assertion function for every element in the array.

            my $aref_of_counts = get_counts();
            assert_arrayref_all( $aref, \&assert_positive_integer, 'Counts are positive' );

        assert_context_scalar() now provides a default message of
        "function_name must be called in scalar context".

        assert_context_nonvoid() now provide a default message of
        "function_name must not be called in void context".


2.3.0   Tue May 30 21:52:20 CDT 2023
        [ENHANCEMENTS]
        Added assert_arrayref_of() to verify that all of the elements
        in an arrayref are of a given type. For example:

            my $users = get_users();
            assert_arrayref_of( $users, 'My::User' );


2.2.0   Sun Jan 29 20:23:59 CST 2023
        [ENHANCEMENTS]
        Added assert_cmp( $x, $op, $y [, $msg] ), analogous to cmp_ok in Test::More, so you can do
            assert_cmp( $n, '>', 10 );
        which will give better diagnostics than just
            assert( $n > 10 );
        Operators supported are: lt le gt ge == != > >= < <=

        assert_all_keys_in() now lists all key failures in the message, not just the first one.

        assert_keys_are() now lists all key failures in the message, not just the first one.


2.1.0   Mon Aug 15 19:54:27 CDT 2022
        [ENHANCEMENTS]
        Add diagnostic strings to the failures. For example:

            assert_nonblank( [ 'foo' ], 'This should be nonblank' );

        would fail with:

            Assertion (This should be nonblank) failed!

        but now fails with:

            Assertion (This should be nonblank) failed!
            Value is a reference to ARRAY.
